--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-    <title>zachliu的简历</title>
-</head>
-
-<body>
-    <div id="demo"></div>
-    <div id="div1out">
-        <div id="div1"></div>
-    </div>
-    <style id="style"></style>
-    <style>* {
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -67,10 +52,5 @@
                 top: 0;
                 right: 0;
             }
-        }</style>
-    <script src="/main.1f19ae8e.js">
-
-    </script>
-</body>
-
-</html>
+        }
+    
